# fragmuapte

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/app/: App.cpp  App.h
src/app/core/: MainLoop.cpp  MainLoop.h  MediaBackend.cpp  MediaBackend.h
src/app/core/backend/graphics/: GraphicsLayerFactory.h
src/app/core/backend/graphics/components/: GraphicsLayer.h  TextureRepository.h
src/app/core/backend/graphics/components/impl/gpu/sdl/: SDLGpuGraphicsLayer.cpp  SDLGpuGraphicsLayer.h  SDLGpuRenderer.h  SDLGpuTextureRepository.cpp
src/app/core/backend/input/: InputHandlerFactory.h
src/app/core/backend/input/components/impl/sdl/: SDLInputHandler.h
src/app/core/backend/time/: TimerFactory.cpp  TimerFactory.h
src/app/core/backend/time/components/impl/sdl/: SDLTimer.cpp
src/app/core/backend/util/: FileIdTracker.cpp  FileIdTracker.h
src/app/core/graphics/: GraphicsLayerFactory.cpp  GraphicsLayerFactory.h
src/app/core/graphics/components/: GraphicsLayer.h  TextureRepository.h  Window.h
src/app/core/graphics/components/impl/gpu/sdl/: SDLGpuGraphicsLayer.h  SDLGpuRenderer.h  SDLGpuTextureRepository.cpp  SDLGpuTextureRepository.h  SDLGpuWindow.cpp  SDLGpuWindow.h
src/app/core/input/: InputHandlerFactory.cpp  InputHandlerFactory.h
src/app/core/input/components/: InputHandler.h
src/app/core/input/components/impl/sdl/: SDLInputHandler.cpp  SDLInputHandler.h
src/app/core/logic/: AggregatedState.h  Content.cpp  Content.h  Input.cpp  Input.h  ResourceLoader.h
src/app/core/logic/components/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  GameObject.h
src/app/core/time/: TimerFactory.cpp  TimerFactory.h
src/app/core/time/components/: Timer.h
src/app/core/time/components/impl/sdl/: SDLTimer.cpp  SDLTimer.h
src/app/settings/: Settings.cpp  Settings.h
